--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-review-send.html
@@ -18,7 +18,7 @@
 
     <!-- HARDCODED PROTOTYPE HTML -->
 
-    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Allocate applications to this assessor'}, ${null})" />
+    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Notify assessor and release feedback'}, ${null})" />
 
     <h2 class="heading-large" th:text="${name}">ASSESSOR NAME</h2>
 
@@ -26,7 +26,7 @@
 
     <div class="grid-row sorting extra-margin">
         <span class="heading-xlarge no-margin">4</span>
-        <span class="heading-small">assigned</span>
+        <span class="heading-small">applications</span>
     </div>
 
     <form>
