--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2253-assessor-interview-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2253-assessor-interview-dashboard.html
@@ -60,6 +60,9 @@
                 <li th:unless="${param.status != null and param.status[0] == 'noApplications'}">
                     <div class="task">
                         <h3 class="heading-small"><a href="/prototypes/IFS-2252-interview-yes-no">Technology inspired</a></h3>
+                        <div class="action-required">
+                            You have been asked to attend an interview panel for this competition. Please respond.
+                        </div>
                     </div>
                     <div class="status">
                         <div class="status-msg msg-deadline">
@@ -99,6 +102,20 @@
                         <strong>
                             <span class="pending-applications">3</span> applications awaiting review
                         </strong>
+                    </div>
+                </div>
+                <div class="status">
+                    <div class="status-msg msg-deadline">
+                        <strong class="bold-medium days-remaining">10</strong><br /> days left<br /> Deadline <span class="day">28</span>
+                        <span class="month">July</span>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="task">
+                    <h3 class="heading-small"><a href="/prototypes/IFS-2254-apps-for-interview">Photonics for health</a></h3>
+                    <div class="action-required">
+                        Applications awaiting review will be added here.
                     </div>
                 </div>
                 <div class="status">
