--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2254-feedback-overview.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2254-feedback-overview.html
@@ -39,8 +39,7 @@
             <p>Empire Ltd</p>
 
             <h3 class="heading-small">Partners</h3>
-            <ul class="list list-bullet">
-
+            <ul class="list">
                 <li>Ludlow</li>
                 <li>EGGS</li>
             </ul>
@@ -124,6 +123,50 @@
             </div>
         </li>
     </ul> -->
+
+    <section>
+        <h2 class="heading-medium no-margin-bottom">Application details</h2>
+        <p class="form-hint">Assessors do not provide scores on these sections of the application.</p>
+
+        <ul class="list-overview">
+            <li class="section-status">
+                <div class="grid-row">
+                    <div class="column-two-thirds">
+                        <h3 class="heading-small">
+                            <a href="#">Project summary</a>
+                        </h3>
+                    </div>
+                    <div class="column-third">
+                        <p class="form-hint no-margin">No feedback</p>
+                    </div>
+                </div>
+            </li>
+            <li class="section-status">
+                <div class="grid-row">
+                    <div class="column-two-thirds">
+                        <h3 class="heading-small">
+                            <a href="#">Public description</a>
+                        </h3>
+                    </div>
+                    <div class="column-third">
+                        <p class="form-hint no-margin">No feedback</p>
+                    </div>
+                </div>
+            </li>
+            <li class="section-status">
+                <div class="grid-row">
+                    <div class="column-two-thirds">
+                        <h3 class="heading-small">
+                            <a href="#">Scope</a>
+                        </h3>
+                    </div>
+                    <div class="column-third">
+                        <p class="form-hint no-margin">No feedback</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </section>
 
     <section>
         <h2 class="heading-medium no-margin-bottom">Assessor feedback</h2>
