--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
@@ -106,27 +106,39 @@
 
             <legend class="visuallyhidden">Email invite for interview</legend>
 
+            <p class="form-hint">Make sure you replace each < and > and all the words in between.</p>
+
             <div class="form-group">
                 <label class="form-label-bold" for="subject">Email subject</label>
-                <input class="form-control width-full" id="subject" type="text" value="Invitation to interview for 'Technology inspired'" />
+                <input class="form-control width-full" id="subject" type="text" value="Please attend an interview for an Innovate UK funding competition" />
             </div>
 
               <h3 class="heading-small">Message</h3>
               <p class="form-hint" style="white-space: pre-wrap">
-Dear [recipient name]
-
-We are inviting you to an interview for the Technology inspired competition.
-
-You can review your assessor feedback and must respond to this before the interview.
-
-Please visit our online Innovation Funding Service to respond to this request: [invite URL]
+Competition: &lt;competition title&gt;
+Application number: &lt;application number&gt;
+Project title: &lt;project title&gt;
               </p>
 
             <div class="form-group">
                 <label class="form-label-bold" for="message">Additional text</label>
                 <textarea id="message" rows="8" class="width-full">
+Thank you for applying for this competition. The review of your proposal by independent assessors is now complete and we are pleased to invite you to the next stage of the competition: an interview to present your project.
+
+Your interview will be held on &lt;date&gt; at &lt;time&gt;. We are unable to change the time of your appointment. Please arrive 20 minutes early in case the interview panel is running ahead of schedule.
+
+&lt;or delete above line and add the line below&gt;
+
+Your interview will be held between &lt;date&gt; and &lt;date&gt;. We will email you by &lt;date&gt; to confirm the exact date and time. We are unable to change the time of your appointment once you have been informed of it.
+
+&lt;Respond to assessment feedback&gt;
+&lt;Review assessment feedback&gt;
+
               </textarea>
             </div>
+
+           
+
 
             <p class="form-hint">
               Yours sincerely,
