--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-allocate-assessors.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-allocate-assessors.html
@@ -21,7 +21,7 @@
 
     <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired'}, ${'Allocate applications to assessors'}, ${'competition closed'})" />
 
-    <p>Select an assessor to begin allocating applications to them for interview.</p>
+    <p>Select an assessor to begin allocating applications to them for the interview panel.</p>
 
     <form action="GET">
         <div class="search-filters">
@@ -57,7 +57,7 @@
         <div class="column-two-thirds">
             <h2>
                 <span class="heading-xlarge">5</span>
-                <span class="heading-small">Applications</span>
+                <span class="heading-small">applications</span>
             </h2>
         </div>
     </div>
