--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2249-applicant-feedback-overview.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2249-applicant-feedback-overview.html
@@ -40,8 +40,7 @@
             <p>Empire Ltd</p>
 
             <h3 class="heading-small">Partners</h3>
-            <ul class="list list-bullet">
-
+            <ul class="list">
                 <li>Ludlow</li>
                 <li>EGGS</li>
             </ul>
@@ -58,7 +57,7 @@
     </div>
 
     <div class="message-alert">
-        <h2 class="heading-small">As the lead applicant, you are required to upload a response to feedback.</h2>
+        <h2 class="heading-small">As the lead applicant you can respond to feedback. This response will be noted by the interview panel.</h2>
     </div>
 
     <h2 class="heading-medium">Your response</h2>
@@ -129,7 +128,7 @@
                         </h3>
                     </div>
                     <div class="column-third">
-                        <p class="form-hint no-margin">No feedback required</p>
+                        <p class="form-hint no-margin">No feedback</p>
                     </div>
                 </div>
             </li>
@@ -141,7 +140,7 @@
                         </h3>
                     </div>
                     <div class="column-third">
-                        <p class="form-hint no-margin">No feedback required</p>
+                        <p class="form-hint no-margin">No feedback</p>
                     </div>
                 </div>
             </li>
@@ -153,7 +152,7 @@
                         </h3>
                     </div>
                     <div class="column-third">
-                        <p class="form-hint no-margin">No feedback required</p>
+                        <p class="form-hint no-margin">No feedback</p>
                     </div>
                 </div>
             </li>
@@ -303,7 +302,7 @@
 
     </section>
 
-    <!-- <h2 class="heading-medium">Attachments</h2> -->
+    <h2 class="heading-medium">Other feedback</h2>
 
     <div class="form-group download">
         <h3 class="heading-small no-margin">Innovation lead response</h3>
