IFS-2250 Email content

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
@@ -27,24 +27,40 @@
 
 	<div class="form-group">
 		<label class="form-label-bold" for="subject">Subject</label>
-    	<input class="form-control width-full" id="subject" type="text" value="Invitation to assessment panel for 'Technology inspired'" />
+    	<input class="form-control width-full" id="subject" type="text" value="Invitation to Innovate UK interview panel for <competition>" />
 	</div>
 
   <h3 class="heading-small">Message</h3>
   <p class="form-hint" style="white-space: pre-wrap">
-Dear [recipient name]
-
-We are inviting you to the assessment panel for the competition 'Technology inspired'.
-
-We recognise your expertise and would greatly appreciate your comments on the scientific / business merit of the applications assigned to the panel assessment.
-
-Please visit our online Innovation Funding Service to respond to this request: [invite URL]
-
-  </p>
+Dear &lt;Firstname Lastname&gt;</p>
 
 	<div class="form-group">
 		<label class="form-label-bold" for="message">Additional text</label>
-    	<textarea id="message" rows="8" class="width-full">
+        <p class="form-hint">Make sure you replace all the < and > and the words in between.</p>
+    	<textarea id="message" rows="30" class="width-full">
+You are invited to attend the next stage in the assessment process for this competition, which is the interview panel. To respond, visit the competition’s page online &lt;insert link into the words “competition’s page” and delete this guidance&gt;.
+
+If you confirm you are available, the applications will appear in your Innovation Funding Service account for you to review during the pre-reading period.
+
+*When*
+Pre-reading period to review applications: &lt;date month year&gt; to &lt;date month year&gt;
+Applicants’ response-to-feedback documents and presentations available by: &lt;date month year&gt;
+Interview panel date&lt;s&gt;: &lt;date month year&gt; to &lt;date month year&gt;
+
+We will send an agenda with the start and finish times for the interview panel in a later email.
+
+*Where*
+&lt;edit if required&gt;
+Polaris House
+North Star Avenue
+Swindon
+SN2 1UH
+
+There are directions on the Research Council UK website. When you arrive, ask for &lt;NAME&gt;.
+
+*Fee*
+We pay &pound;500 a day for your attendance and &lt;£500 for pre-reading&gt;, plus travel and subsistence. Sign in to the Innovation Funding Service to see the travel and subsistence rates we offer. After the panel, please send your invoice and receipts for travel and subsistence to competitions.admin@innovateuk.gov.uk.
+
       </textarea>
 	</div>
 
