--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
@@ -106,8 +106,6 @@
 
             <legend class="visuallyhidden">Email invite for interview</legend>
 
-            <p class="form-hint">Make sure you replace each < and > and all the words in between.</p>
-
             <div class="form-group">
                 <label class="form-label-bold" for="subject">Email subject</label>
                 <input class="form-control width-full" id="subject" type="text" value="Please attend an interview for an Innovate UK funding competition" />
@@ -122,7 +120,8 @@ Project title: &lt;project title&gt;
 
             <div class="form-group">
                 <label class="form-label-bold" for="message">Additional text</label>
-                <textarea id="message" rows="8" class="width-full">
+                <p class="form-hint">Make sure you replace each &lt; and &gt; and all the words in between.</p>
+                <textarea id="message" rows="60" class="width-full">
 Thank you for applying for this competition. The review of your proposal by independent assessors is now complete and we are pleased to invite you to the next stage of the competition: an interview to present your project.
 
 Your interview will be held on &lt;date&gt; at &lt;time&gt;. We are unable to change the time of your appointment. Please arrive 20 minutes early in case the interview panel is running ahead of schedule.
@@ -134,11 +133,45 @@ Your interview will be held between &lt;date&gt; and &lt;date&gt;. We will email
 &lt;Respond to assessment feedback&gt;
 &lt;Review assessment feedback&gt;
 
+The assessors' comments and scores are available for you to read by logging into the Innovation Funding Service (IFS). This feedback is intended to be constructive, highlighting the strengths and weaknesses of your application. Different assessors may give conflicting opinions, which reflects their varying interpretations of your proposal.
+
+&lt;Delete if not applicable:&gt;
+
+You can respond to this feedback in writing if you wish. Your response will be reviewed by the assessor panel before your interview. Upload your response document by following the instructions on IFS before midday on &lt;date&gt;. Your document:
+
+-	must be a single PDF
+-	must be no more than &lt;3 / 10&gt; pages long
+-	can contain charts and diagrams
+-	will not be reviewed if it is late or too long
+
+*Submit your presentation*
+
+Send the slides for your presentation to competitionenquiries@innovateuk.gov.uk by midday on &lt;date&gt;. You will not be able to make any edits after this date.
+
+Your presentation must:
+
+-	be in Microsoft PowerPoint
+-	be no more than &lt;10 / 20&gt; minutes long
+-	contain no more than &lt;10 / 20&gt; slides
+-	not include videos or external links
+
+*Tell us who will be attending*
+
+Up to &lt;3 / 9&gt; members of your project team can attend the interview. Please email their names to competitionenquiries@innovateuk.gov.uk by midday on &lt;date&gt;. We recommend that each organisation in your consortium is represented, if possible.
+
+*Interview format*
+
+The timings will be strictly enforced, so practice your presentation in advance and use your time wisely. You will not need to introduce your proposal as the interview panel will already be familiar with it &lt;and your response to the assessors' feedback&gt;.
+
+Once you have presented your slides the panel will ask you questions for up to &lt;20 / 30&gt; minutes.
+
+&lt;After a closed discussion, you may be asked to answer some additional questions for up to &lt;15&gt; minutes&gt;
+
+Congratulations on reaching this stage. Please contact Customer Support Services on 0300 321 4357 if you have any questions.
+
+
               </textarea>
             </div>
-
-           
-
 
             <p class="form-hint">
               Yours sincerely,
