--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
@@ -111,12 +111,13 @@
                 <input class="form-control width-full" id="subject" type="text" value="Please attend an interview for an Innovate UK funding competition" />
             </div>
 
-              <h3 class="heading-small">Message</h3>
-              <p class="form-hint" style="white-space: pre-wrap">
-Competition: &lt;competition title&gt;
+            <div class="form-group">
+              <h3 class="heading-small no-margin">Message</h3>
+              <p class="form-hint" style="white-space: pre-wrap">Competition: &lt;competition title&gt;
 Application number: &lt;application number&gt;
 Project title: &lt;project title&gt;
               </p>
+            </div>
 
             <div class="form-group">
                 <label class="form-label-bold" for="message">Additional text</label>
