--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
@@ -30,9 +30,10 @@
     	<input class="form-control width-full" id="subject" type="text" value="Invitation to Innovate UK interview panel for <competition>" />
 	</div>
 
-  <h3 class="heading-small">Message</h3>
-  <p class="form-hint" style="white-space: pre-wrap">
-Dear &lt;Firstname Lastname&gt;</p>
+    <div class="form-group">
+        <h3 class="heading-small no-margin">Message</h3>
+        <p class="form-hint" style="white-space: pre-wrap">Dear &lt;Firstname Lastname&gt;</p>
+    </div>
 
 	<div class="form-group">
 		<label class="form-label-bold" for="message">Additional text</label>
