--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/application-assessor-feedback.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/application-assessor-feedback.html
@@ -18,7 +18,7 @@
         <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle=${model.question.shortName},subTitle=${applicationName},size='heading-xlarge'" />
     </th:block>
 
-    <h2 class="heading-medium no-margin" th:text="|${model.question.questionNumber}. ${model.question.name}|">7. What are the risks (technical, commercial and environmental) to your project's success? What is your risk management strategy?</h2>
+    <h2 class="heading-medium no-margin" th:text="(${model.question.questionNumber} ? ${model.question.questionNumber} + '. ' : ' ') + ${model.question.name} ">7. What are the risks (technical, commercial and environmental) to your project's success? What is your risk management strategy?</h2>
 
     <h3 class="heading-medium">Your answer:</h3>
     <th:block th:each="item : ${model.responses}">
