--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
@@ -6,8 +6,10 @@
     </head>
 
     <body th:with="context='project'" class="project-detail finance-contact">
+        <th:block th:insert="fragments/modals :: modal-overlay" />
         <th:block th:insert="fragments/layout :: body-start" />
         <th:block th:insert="fragments/layout :: global-header" />
+        <th:block th:insert="fragments/modals :: modal-resend-finance-contact" />
 
         <main tabindex="-1" id="content">
             <th:block th:insert="fragments/layout :: main-content-start" />
@@ -45,13 +47,13 @@
                         <div class="multiple-choice" th:each="user : ${model.invitedUsers}">
                             <input type="radio" th:field="*{financeContact}" th:value="${user.id}" th:attr="disabled=${user.status != 'EXISTING'} ? 'disabled' : null,data-required-errormessage=#{validation.financecontactform.financecontact.required}" required="required" />
                             <label data-set-section-valid="#finance-contact-section" data-clear-inputs="#name-finance-contact,#email-finance-contact" th:for="${#ids.prev('financeContact')}" th:text="${user.name}">Username</label>
-                            <button
-                                    th:value="${user.id}"
-                                    class="button button-secondary"
-                                    name="resend_fc_invite"
-                                    type="submit">
-                                Resend
-                            </button>
+                            <a
+                                data-js-modal="modal-resend-finance-contact"
+                                th:attr="data-modal-form-action=@{/project/{projectId}/details/finance-contact?resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})}"
+                                th:href="@{/project/{projectId}/details/finance-contact?resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})}"
+                                class="button button-clear no-margin">
+                                Resend invite
+                            </a>
                         </div>
 
                         <div class="multiple-choice" data-target="finance-contact-table">
