--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/application-assessor-feedback.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/application-assessor-feedback.html
@@ -32,8 +32,8 @@
         </th:block>
     </th:block>
 
-    <h2 class="heading-large" th:text="'Average score: '+${model.aggregateResource.avgScore}+ '/ ' + ${model.question.assessorMaximumScore}">Average score: 7/10</h2>
-    <h3 class="heading-medium no-margin">Your assessors' feedback</h3>
+    <h2 class="heading-large" th:text="${model.question.assessorMaximumScore} ? 'Average score: '+${model.aggregateResource.avgScore}+ '/ ' + ${model.question.assessorMaximumScore}">Average score: 7/10</h2>
+    <h3 class="heading-medium no-margin" th:if="${#lists.size(model.aggregateResource.feedback) > 0}">Your assessors' feedback</h3>
     <ul class="boxed-list">
         <li th:each="item, iterStat : ${model.aggregateResource.feedback}">
             <h4 class="heading-small" th:text="|Assessor ${iterStat.count}|">Assessor 1</h4>
