IFS-2246 Content updates

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
@@ -29,7 +29,7 @@
 
         <li class="column-quarter">
             <div class="highlight-panel highlight-panel-padded">
-                <span class="heading-large">23</span><br /><small>Assigned and invited to interview</small>
+                <span class="heading-large">23</span><br /><small>Assigned to interview panel</small>
             </div>
         </li>
     </ul>
@@ -55,7 +55,7 @@
         <div class="column-half">
             <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                 <span class="heading-xlarge no-margin">60</span>
-                <span class="heading-small">applications</span>
+                <span class="heading-small">applications in competition</span>
             </th:block>
             <th:block th:if="${param.tab != null and param.tab[0] == 'view'}">
                 <span class="heading-xlarge no-margin">23</span>
