--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
@@ -26,7 +26,7 @@
     <p>Dave Smith, Christopher Soames, Martin Trollope</p>
 
 	<div class="form-group">
-		<label class="form-label-bold" for="subject">Subject</label>
+		<label class="form-label-bold" for="subject">Email subject</label>
     	<input class="form-control width-full" id="subject" type="text" value="Invitation to Innovate UK interview panel for <competition>" />
 	</div>
 
@@ -37,9 +37,9 @@
 
 	<div class="form-group">
 		<label class="form-label-bold" for="message">Additional text</label>
-        <p class="form-hint">Make sure you replace all the < and > and the words in between.</p>
+        <p>Make sure you replace all the < and > and the words in between.</p>
     	<textarea id="message" rows="30" class="width-full">
-You are invited to attend the next stage in the assessment process for this competition, which is the interview panel. To respond, visit the competition’s page online &lt;insert link into the words “competition’s page” and delete this guidance&gt;.
+You are invited to attend the next stage in the assessment process for this competition, which is the interview panel. To respond, visit the online competition page &lt;insert link into the words “competition’s page” and delete this guidance&gt;.
 
 If you confirm you are available, the applications will appear in your Innovation Funding Service account for you to review during the pre-reading period.
 
