--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-allocate-assessors.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-allocate-assessors.html
@@ -57,7 +57,7 @@
         <div class="column-two-thirds">
             <h2>
                 <span class="heading-xlarge">5</span>
-                <span class="heading-small">applications</span>
+                <span class="heading-small">assessors</span>
             </h2>
         </div>
     </div>
@@ -68,7 +68,7 @@
                 <tr>
                     <th scope="col">Assessor</th>
                     <th scope="col">Skill areas</th>
-                    <th scope="col" class="width-small numeric">Assigned</th>
+                    <th scope="col" class="width-small numeric">Allocated</th>
                     <th scope="col"><span class="visuallyhidden">Assign applicants</span></th>
                 </tr>
             </thead>
