--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-assign-application-assessor.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-assign-application-assessor.html
@@ -247,7 +247,7 @@
             <div class="column-two-thirds">
                 <h2>
                     <span class="heading-xlarge">4</span>
-                    <span class="heading-small">applications assigned to this assessor</span>
+                    <span class="heading-small">applications allocated to this assessor</span>
                 </h2>
             </div>
         </div>
