--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
@@ -14,7 +14,7 @@
 <main id="content">
   <th:block th:insert="fragments/layout :: main-content-start" />
 
-  <th:block th:insert="prototypes/fragments/applicant-view :: prototype-subheader(${'Invite assesssors to attend'}, ${'/prototypes/IFS-2246-assign-applications?tab=view'})" />
+  <th:block th:insert="prototypes/fragments/applicant-view :: prototype-subheader(${'Assign applications to interview panel'}, ${'/prototypes/IFS-2246-assign-applications?tab=view'})" />
 
     <!-- HARDCODED PROTOTYPE HTML -->
 
